--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -44,6 +44,10 @@ QPushButton:hover{
 image: url(:start_hover.png);
 border-radius:0px; 
 } 
+QPushButton:pressed{ 
+image: url(:start.png);
+border-radius:0px; 
+}
 </string>
         </property>
         <property name="text">
@@ -68,6 +72,10 @@ QPushButton:hover{
 image: url(:pause_hover.png);
 border-radius:0px; 
 } 
+QPushButton:pressed{ 
+image: url(:pause.png);
+border-radius:0px; 
+}
 </string>
         </property>
         <property name="text">
@@ -163,6 +171,45 @@ border-radius: 2px;
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="current_time">
+        <property name="font">
+         <font>
+          <family>Consolas</family>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>00:00:00</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_3">
+        <property name="font">
+         <font>
+          <family>Consolas</family>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>/</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="totalTime">
+        <property name="font">
+         <font>
+          <family>Consolas</family>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>00:00:00</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="pushButton_volume">
         <property name="minimumSize">
          <size>
@@ -192,6 +239,73 @@ image: url(:sound_mute.png);
         </property>
         <property name="text">
          <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QSlider" name="horizontalSlider_2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QSlider::groove:horizontal {
+border: 0px solid #bbb;
+}
+
+QSlider::sub-page:horizontal {
+background: rgb(235,97,0);
+border-radius: 0px;
+margin-top:8px;
+margin-bottom:8px;
+}
+
+QSlider::add-page:horizontal {
+background: rgb(255,255, 255);
+border: 0px solid #777;
+border-radius: 2px;
+margin-top:8px;
+margin-bottom:8px;
+}
+
+QSlider::handle:horizontal {
+background: rgb(255,153,102); 
+border: 1px solid rgb(255,153,102); 
+width: 8px;
+height:8px;
+border-radius: 2px;
+margin-top:6px;
+margin-bottom:6px;
+}
+
+QSlider::handle:horizontal:hover {
+background: rgb(255,128,6); 
+border: 1px solid rgba(102,102,102,102);
+border-radius: 7px;
+}
+
+QSlider::sub-page:horizontal:disabled {
+background: #bbb;
+border-color: #999;
+}
+
+QSlider::add-page:horizontal:disabled {
+background: #eee;
+border-color: #999;
+}
+
+QSlider::handle:horizontal:disabled {
+background: #eee;
+border: 1px solid #aaa;
+border-radius: 4px;
+}
+
+</string>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
         </property>
        </widget>
       </item>
